Fixed order of style imports and CSS file imports alongside with vertically aligning my input boxes for desktop sized screens

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@ p {
   width: 90%;
   max-width: 400px;
   float: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .firstname-group,
@@ -42,18 +45,21 @@ p {
 .content-group,
 .email-group {
   margin-bottom: 15px;
+  width: 100%;
 }
 
 label {
   font-weight: bold; /*Bolding for emphasis when user is looking at form*/
-  color: #000000; /*Made label text black so it is readable*/
+  color: #222222; /*Made label text a soft black so it is readable*/
   font-size: 1rem;
   margin-bottom: 5px;
 }
 
 input,
 select {
+  display: block;
   width: 80%;
+  margin: 0 auto;
   padding: 10px; /*Helping space out elements*/
   background-color: #f0f0f0;
   font-family: 'Inter', Arial, Helvetica, sans-serif; /*Redefining font family for redundancy purposes*/
@@ -109,6 +115,23 @@ select {
   select {
     width: 60%;
   }
+  
+  #beta-signup-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .firstname-group,
+  .lastname-group,
+  .platform-group,
+  .content-group,
+  .email-group {
+    width: 80%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+  }
 }
 
 /*Media Query for screens with a minimum width of 1200px such as larger desktops and wide screens*/
@@ -130,5 +153,24 @@ select {
   .signup-button {
     font-size: 1.75rem;
     padding: 12px 24px;
+  }
+  
+  #beta-signup-form {
+    display: flex;
+	flex-direction: center;
+	align-items: center;
+  }
+}
+
+/*Media Query for screens with a max width of 480px like much smaller screens*/
+@media screen and (max-width: 480px) {
+  .signup-section,
+  .about {
+    width: 90%;
+  }
+
+  input,
+  select {
+    width: 90%;
   }
 }
